Closed Bug 462658 Opened 17 years ago Closed 17 years ago

Folder drop down in Bookmarks contextual dialog cannot be closed

Categories

(Core :: Widget: Win32, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.1b2

People

(Reporter: whimboo, Assigned: masayuki)

Details

(Keywords: regression)

Attachments

(2 files)

Opening the folder drop down within the bookmarks contextual dialog to choose the destination folder doesn't let you to close it again. It still pops-up again. That's a regression which starts happening between these builds: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/2008080403 Minefield/3.1a2pre ID:2008080403 Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/2008080503 Minefield/3.1a2pre ID:2008080503 Checkins in this timeframe: http://tinyurl.com/6mbxly No idea if bug Bug 433340 could be the cause of the regression. Masayuki?
Just to give an additional note: this doesn't happen on OS X. Looks like Windows only.
I'm not sure what is a problem. Would you explain the detail?
Sure. See the attached screenshot. Opening the drop down by clicking on it shows up the list of folders. But clicking again on "Unfiled Bookmarks" or the blue arrow lets the drop down open again. Means as often you click you cannot close it that way.
Ah, it's not really my regression. But I'm checking the cause.
Assignee: nobody → masayuki
Component: Places → Widget: Win32
Product: Firefox → Core
QA Contact: places → win32
Attached patch Patch v1.0Splinter Review
this is a bug of win32 widget. gRollupConsumeEvent is updated in nsIRollupListener::Rollup. We should cache the value in local variable.
Attachment #345921 - Flags: review?(emaijala)
Status: NEW → ASSIGNED
Thanks Masayuki. Do you know which patch/bug this could have this bug introduced?
(In reply to comment #6) > Thanks Masayuki. Do you know which patch/bug this could have this bug > introduced? I think that this bug is not a regression. Even if my patch is turning point to reproduce this bug, this bug is there since mozilla beginning, probably.
Ok, but it's strange that it only happens within the bookmarks contextual dialog. All other instances of the whole ui aren't affected. So we can say that bug 433340 has started the visual appearance in the dialog?
Attachment #345921 - Flags: review?(emaijala) → review+
Attachment #345921 - Flags: superreview?(roc)
Attachment #345921 - Flags: superreview?(roc) → superreview+
Comment on attachment 345921 [details] [diff] [review] Patch v1.0 The risk is very low. And this bug is a regression.
Attachment #345921 - Flags: approval1.9.1b2?
Comment on attachment 345921 [details] [diff] [review] Patch v1.0 a191b2=beltzner
Attachment #345921 - Flags: approval1.9.1b2? → approval1.9.1b2+
landed to trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b2
Verified with Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b2pre) Gecko/20081118 Minefield/3.1b2pre (.NET CLR 3.5.30729) ID:20081118035322 Thanks Masayuki!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: