Bug 462658 Folder drop down in Bookmarks contextual dialog cannot be closed r=ere, sr=roc, a=beltzner